--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,7 @@ out/
 
 ### VS Code ###
 .vscode/
+
+### Security (민감 정보 무시) ###
+src/main/resources/application-secret.properties
+application-secret.properties
