--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,43 @@
 version: '3.8'
 
 services:
-  # [1] 기존에 쓰시던 Neo4j
+  # [1] 스프링 부트 서버 (New!)
+  server:
+    build: .  # 현재 폴더의 Dockerfile로 빌드
+    container_name: ojk-server
+    ports:
+      - "8080:8080" # 외부 접속 허용
+    depends_on:
+      - neo4j
+      - redis
+    environment:
+      # ★ 중요: localhost 대신 컨테이너 이름(neo4j, redis)을 써야 함
+      - SPRING_NEO4J_URI=bolt://neo4j:7687
+      - SPRING_NEO4J_AUTHENTICATION_USERNAME=${SPRING_NEO4J_AUTHENTICATION_USERNAME}
+      - SPRING_NEO4J_AUTHENTICATION_PASSWORD=${SPRING_NEO4J_AUTHENTICATION_PASSWORD} # 설정한 비번
+      - SPRING_DATA_REDIS_HOST=redis
+      - SPRING_DATA_REDIS_PORT=6379
+      - SPRING_MAIL_USERNAME=${SPRING_MAIL_USERNAME}
+      - SPRING_MAIL_PASSWORD=${SPRING_MAIL_PASSWORD}
+      - JWT_SECRET=${JWT_SECRET}
+
+  # [2] Neo4j
   neo4j:
-    image: neo4j:5.15.0 # 또는 사용 중인 버전
+    image: neo4j:5.15.0
     container_name: ojk-neo4j
     ports:
-      - "7474:7474" # HTTP
-      - "7687:7687" # Bolt (Java 연결용)
+      - "7474:7474"
+      - "7687:7687"
     environment:
-      - NEO4J_AUTH=neo4j/password1234 # 사용 중인 비번으로 변경
+      - NEO4J_AUTH=${SPRING_NEO4J_AUTHENTICATION_USERNAME}/${SPRING_NEO4J_AUTHENTICATION_PASSWORD}
     volumes:
-      - ./data/neo4j:/data # 데이터 날아가지 않게 저장
+      - ./data/neo4j:/data
 
-  # [2] 새로 추가할 Redis
+  # [3] Redis
   redis:
     image: redis:alpine
     container_name: ojk-redis
     ports:
-      - "6379:6379" # Redis 기본 포트
+      - "6379:6379"
     volumes:
       - ./data/redis:/data
