feat(auth): switch to redis-backed session authentication

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,8 @@ spring.mail.properties.mail.smtp.writetimeout=5000
 spring.config.import=optional:classpath:/application-secret.properties
 
 logging.level.org.springframework.data.neo4j=DEBUG
+
+spring.session.store-type=redis
+spring.session.timeout=60m
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
