--- a/build.gradle
+++ b/build.gradle
@@ -31,11 +31,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-mail' // 이메일 발송
-	implementation 'io.jsonwebtoken:jjwt-api:0.11.5' // JWT
+	implementation 'org.springframework.session:spring-session-data-redis'
 	implementation 'org.apache.commons:commons-lang3:3.14.0' // 랜덤번호
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
-	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
-	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-data-neo4j-test'
