--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -1,21 +1,21 @@
 name: CI/CD Pipeline
 
 on:
-  pull_request:                 # [추가] PR(main 대상)에서도 워크플로우 실행
+  pull_request:
     branches: [ "main" ]
   push:
-    branches: [ "main" ]        # main에 push(merge 포함) 시 실행
+    branches: [ "main" ]
 
-concurrency:                    # [추가] 같은 브랜치에서 중복 실행 방지
+concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
-permissions:                    # [추가] 최소 권한 원칙 (읽기 전용)
+permissions:
   contents: read
 
 jobs:
   build:
-    name: Build (no tests)      # [추가] job 분리 (PR에서는 빌드만 수행)
+    name: Build & Test
     runs-on: ubuntu-latest
 
     steps:
@@ -31,15 +31,17 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
-      - name: Build with Gradle (skip tests)
-        run: ./gradlew clean bootJar -x test
-        # 테스트 코드가 없으므로 -x test 유지
+      - name: Run tests
+        run: ./gradlew clean test
+
+      - name: Build with Gradle
+        run: ./gradlew bootJar -x test
 
   deploy:
     name: Deploy to AWS EC2
     runs-on: ubuntu-latest
-    needs: build                # [추가] build 성공 후에만 deploy 실행
-    if: github.event_name == 'push'   # [추가] PR에서는 배포되지 않도록 조건 추가
+    needs: build
+    if: github.event_name == 'push'
 
     steps:
       - name: Deploy via SSH
@@ -49,7 +51,7 @@ jobs:
           username: ubuntu
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            set -e              # [추가] 중간 실패 시 즉시 종료
+            set -e
             cd /home/ubuntu/ojk
             git pull origin main
             docker compose up -d --build
